pkg/lang/testdata/ub/config/valid/locals-literals.ub
locals: {
  region:     'us-east-1'
  aws-config: {
    assume-role: {
      role-arn:    'arn:aws:iam::123456789012:role/unobin-state'
      external-id: 'unobin-test'
    }
  }
}

inputs: { region: 'us-east-1' }
