pkg/lang/testdata/ub/config/invalid/state-unknown-local.ub
locals: { aws-config: { region: 'us-east-1' } }

state: {
  @backend: s3
  bucket:   'cloudboss'
  aws:      local.aws-cfg
}
